@@ -1,3 +1,4 @@
+2025-09-01 (8b3dd27): mingw-w64-x86_64-clang-libs: for lupdate
 2025-09-01 (3c4cc90): MinGW fix - step by step ...
 2025-09-01 (30daf92): MinGW fix - step by step ...
 2025-09-01 (a7e5910): test MinGW64 build
